[package]
name = "bamboolog"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
axum-extra = { version = "0.12.1", features = ["file-stream", "typed-header"] }
bcrypt = "0.15.1"
chrono = "0.4.38"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.1.0", features = ["aws_lc_rs"] }
sea-orm = { version = "2.0.0-rc.27", features = [
    "runtime-tokio-rustls",
    "macros",
    "schema-sync",
    "entity-registry",
    "sqlx-sqlite",
] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
rand = { version = "0.9.2", features = ["thread_rng"] }
tower = "0.5.2"
toml = "0.8.19"
anyhow = "1.0.100"
thiserror = "2.0.17"
tower-http = { version = "0.6.6", features = ["fs"] }
markdown = "1.0.0"
mime_guess = "2.0.5"
tokio-util = { version = "0.7.17", features = ["io"] }
minijinja = { version = "2.14.0", features = ["loader"] }

# [features]
# default = ["sqlite"]
# postgres = ["sea-orm/sqlx-postgres"]
# mysql = ["sea-orm/sqlx-mysql"]
# sqlite = ["sea-orm/sqlx-sqlite"]
# full = ["mysql", "postgres", "sqlite"]
